# Rahbar-e-Sukhan

./: CMakeCache.txt  CMakeLists.txt  Lughat.csv  Makefile  README.MD  README.md  cmake_install.cmake  qml.qrc  qml.qrc.depends  qml_qmlcache.qrc.depends
.cmake/api/v1/reply/: cache-v2-a720982d0a6a2551a84b.json  cmakeFiles-v1-c7cc52809867a8ec836d.json  codemodel-v2-b911fc68f692f1302977.json  index-2021-03-24T14-48-31-0156.json  target-Rahbar-e-Sukhan-Debug-26f2ad94a910831db243.json  target-Rahbar-e-Sukhan_autogen-Debug-2c4530128db76d07e0b3.json
Files/: Lughat.txt
Rahbar-e-Sukhan_autogen/: moc_predefs.h
Rahbar-e-Sukhan_autogen/6YEA5652QU/: moc_dummy_class.cpp  moc_dummy_class.cpp.d
extra/: edlib.cpp  iosifovitch-parallel.hpp  levenshtein-parallel.cpp  meson.build
include/: Isqat.hpp  Lafz.hpp  Meter.hpp  Satoor.hpp  Satr.hpp  combination.hpp  dummy_class.hpp  fetch_dict.hpp  input.hpp  iosifovitch.hpp  meters.hpp  utility.hpp
qml/: busy.qml  button.qml  card.qml  edit.qml  editCard.qml  filler.qml  home.qml  landing.qml  main.qml  output.qml  text.qml
src/: Isqat.cpp  Lafz.cpp  Meter.cpp  Satoor.cpp  Satr.cpp  combination.cpp  dummy_class.cpp  fetch_dict.cpp  input.cpp  levenshtein.cpp  main.cpp  meson.build
